<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_color"
                android:minHeight="@dimen/nav_header_height">


                <TextView
                    android:id="@+id/tvFirstWord"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:background="@drawable/bg_circular_text"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading_1x"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="N" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="@+id/tvFirstWord"
                    app:layout_constraintStart_toStartOf="@+id/tvFirstWord"
                    app:layout_constraintTop_toBottomOf="@+id/tvFirstWord"
                    tools:text="Nyi Ye Han" />


                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/about"

                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="@+id/tvName"
                    app:layout_constraintStart_toStartOf="@+id/tvName"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2">

            <!--  phone number         -->

            <TextView
                android:id="@+id/tvPhoneFirstWord"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_circular_text"
                android:gravity="center"
                android:text="@string/p"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvPhone"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvPhoneFirstWord"

                app:layout_constraintTop_toTopOf="@+id/tvPhoneFirstWord" />

            <TextView
                android:id="@+id/tvNumber"
                android:foreground="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/tvPhone"
                app:layout_constraintTop_toBottomOf="@+id/tvPhone"
                tools:text="09771122366" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_round_phone_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvPhoneFirstWord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvPhoneFirstWord" />

            <View
                android:id="@+id/viewPhoneDown"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneFirstWord" />

            <!--  email        -->

            <TextView
                android:id="@+id/tvEmailFirstWord"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:background="@drawable/bg_circular_text"
                android:gravity="center"
                android:text="@string/e"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/tvPhoneFirstWord"
                app:layout_constraintTop_toBottomOf="@id/viewPhoneDown" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvEmailFirstWord"
                app:layout_constraintTop_toTopOf="@+id/tvEmailFirstWord" />

            <TextView
                android:id="@+id/tvEmailNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/secondary_text"
                android:foreground="?attr/selectableItemBackground"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/tvEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                tools:text="09771122366" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_email_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvEmailFirstWord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvEmailFirstWord" />

            <View
                android:id="@+id/viewEmailDown"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@+id/tvEmailFirstWord" />


            <!--  website        -->

            <TextView
                android:id="@+id/tvWebFirstWord"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:background="@drawable/bg_circular_text"
                android:gravity="center"
                android:text="@string/w"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/tvEmailFirstWord"
                app:layout_constraintTop_toBottomOf="@id/viewEmailDown" />


            <TextView
                android:id="@+id/tvWebNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/website"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvWebFirstWord"
                app:layout_constraintTop_toTopOf="@+id/tvWebFirstWord" />

            <TextView
                android:id="@+id/tvWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/text_small"

                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintStart_toStartOf="@+id/tvWebNo"
                app:layout_constraintTop_toBottomOf="@+id/tvWebNo"
                tools:text="https//:www.google.com" />

            <ImageView
                android:id="@+id/ivWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_link_24"
                app:layout_constraintBottom_toBottomOf="@+id/tvWebFirstWord"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvWebFirstWord" />

            <View
                android:id="@+id/viewWebDown"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/line"
                app:layout_constraintTop_toBottomOf="@+id/tvWebFirstWord" />

            <TextView
                android:id="@+id/tvAddressTitle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:background="@drawable/bg_circular_text"
                android:gravity="center"
                android:text="@string/a"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/viewWebDown"
                app:layout_constraintTop_toBottomOf="@+id/viewWebDown" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/street"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvAddressTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvAddressTitle" />

            <TextView
                android:id="@+id/tvStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="Ellsworth Summit" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/suite"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvStreet"
                app:layout_constraintTop_toBottomOf="@+id/tvStreet" />

            <TextView
                android:id="@+id/tvSuite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="Suite 729" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/tvSuite"
                app:layout_constraintTop_toBottomOf="@+id/tvSuite" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="Aliyaview" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:text="@string/zipcode"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tvCity"
                app:layout_constraintTop_toBottomOf="@+id/tvCity" />

            <TextView
                android:id="@+id/tvZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:text="45169" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvAddressTitle"
                app:layout_constraintStart_toEndOf="@+id/tvAddressTitle"
                app:layout_constraintTop_toTopOf="@+id/tvAddressTitle" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>